force-app/main/default/objects/Account/fields/Active_Depend__c.field-meta.xml
<CustomField>
    <fullName>Active_Depend__c</fullName>
    <label>Active Depend</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Active__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>