force-app/main/default/objects/Account/fields/Contact_Types__c.field-meta.xml
<CustomField>
    <fullName>Contact_Types__c</fullName>
    <label>Contact Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>