force-app/main/default/objects/Account/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>