force-app/main/default/objects/Account/fields/No_Of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Contacts__c</fullName>
    <description>demo</description>
    <label>No Of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>