force-app/main/default/objects/Account/listViews/All_Recipes_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Recipes_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>All Recipes Accounts</label>
</ListView>